<resources>
	<string name="app_name">Rides</string>
	<string name="enter_number_of_vehicles">Enter number of vehicles (1-100)</string>
	<string name="fetch">Fetch</string>
	<string name="carbon_emissions_button">Carbon Emissions</string>
	<string name="sample_vehicle_make_model">BMW</string>
	<string name="sample_vehicle_vin">VIN: KKFKDSX23</string>
	<string name="sample_vehicle_color">Color: White</string>
	<string name="sample_vehicle_type">Type: Van</string>
	<string name="emission_unit">%1$s </string>
	<string name="estimated_carbon_emissions">Estimated Carbon Emissions: %1$s units</string>

</resources>