<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
			name="viewModel"
			type="com.mouhsinbourqaiba.rides.viewmodel.VehicleDetailsViewModel" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="@dimen/standard_padding"
		tools:context=".ui.VehicleDetailsFragment">

		<TextView
			android:id="@+id/vehicleMakeModel"
			style="@style/VehicleTitleText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/space_large"
			android:text="@{viewModel.vehicle.makeAndModel}"
			tools:text="@string/sample_vehicle_make_model"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

		<TextView
			android:id="@+id/vehicleVin"
			style="@style/VehicleDetailText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@{viewModel.vehicle.vin}"
			tools:text="@string/sample_vehicle_vin"
			app:layout_constraintTop_toBottomOf="@id/vehicleMakeModel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

		<TextView
			android:id="@+id/vehicleColor"
			style="@style/VehicleDetailText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@{viewModel.vehicle.color}"
			tools:text="@string/sample_vehicle_color"
			app:layout_constraintTop_toBottomOf="@id/vehicleVin"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

		<TextView
			android:id="@+id/vehicleType"
			style="@style/VehicleDetailText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@{viewModel.vehicle.carType}"
			tools:text="@string/sample_vehicle_type"
			app:layout_constraintTop_toBottomOf="@id/vehicleColor"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent" />

		<Button
			android:id="@+id/carbonEmissions"
			style="@style/PrimaryButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/carbon_emissions_button"
			app:layout_constraintTop_toBottomOf="@id/vehicleType"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="@dimen/space_large" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>
